--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -27,6 +27,7 @@
         "preline": "^1.9.0",
         "react-apexcharts": "^1.4.1",
         "react-daisyui": "^4.1.2",
-        "react-icons": "^4.12.0"
+        "react-icons": "^4.12.0",
+        "react-toastify": "^9.1.3"
     }
 }
